--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Setup IJ Start Canon - Canon IJ Printer
-description: Just visit canon official website - and enter canon printer model number to download, install and setup canon printer drivers.
+title: Ij.start.canon | Install canon printer - Canon IJ Printer Driver
+description: Canon is the company of printers situated in the united states which provide it.start.canon printers. These are the inkjet printer which means that they print through liquid ink.
 theme: jekyll-theme-cayman
